--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div id="mainContent">
 
 <!-- Title -->
-<p id="titleText"> Who's That Pokemon? </p>
+<p id="titleText"> Who's That Pokemon? 1 </p>
 
 <p id="introText"> This game is based on the guessing game from the show, except I chose to show the actual Pokemon instead of just the silhouette! Choose which generations you want to play from at the right (the default is all generations). Images are obtained from <a href="http://archives.bulbagarden.net/w/index.php?title=Category:Ken_Sugimori_Pok%C3%A9mon_artwork&fileuntil=*092%0A092Gastly+RG.png#mw-category-media" style="color: yellow">Bulbapedia</a> and were drawn by Ken Sugimori. I use a database obtained from <a href="https://github.com/veekun/pokedex/blob/master/pokedex/data/csv/pokemon_species.csv" style="color: yellow">Veekun's Github</a> (thanks!).</p>
 
