--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
 <!-- Current Score -->
 <div id="currScore" class="pokeBox">
-<div class="pokeBoxTitle"><span>Score</span></div>
+<div class="pokeBoxTitle">Score</div>
 <p id="currScoreDisp"></p>
 </div>
 
 
 <!-- High Score -->
 <div id="highScore" class="pokeBox">
-<p class="pokeBoxTitle moveUp">High Score</p>
-<p id="highScoreDisp" class="moveUp">99</p>
+<p class="pokeBoxTitle">High Score</p>
+<p id="highScoreDisp">99</p>
 </div>
 
 </div>
