--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src='//code.jquery.com/jquery-1.11.0.min.js'></script>
 <script src="jquery.csv-0.71.min.js"></script>
 
-<title>Project 1</title>
+<title>PokeWho?</title>
 
 </head>
 
