Removed unnecessary ajax calls.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 var pkmnName; 		// This is the actual name: Bulbasaur
 var pkmnFileName; 	// Bulbasaur001.png
 var myURL;		// This is the URL the image ajax request
+var csvArray;		// This is the csv pokemon database file
 var score = 0;
 $("#currScoreDisp").html(score);
 
@@ -131,13 +132,13 @@ $("#guessesLeft").html(guessesLeft);
 function jsonSuccess(jsonFile) {
 	var dataStr = jsonFile.query.pages["-1"].imageinfo[0].url;
 	$("#myImg").attr("src", dataStr);
-	
+	console.log("Made a successful JSON call...");
 	// ITERATION
 	//i++;
 	//if (i < 720) { reset(); } else { console.log("I Mean It..."); };
 };
 
-function jsonCall(csvFile) {
+function jsonCall() {
 	var randomNum = Math.floor((Math.random() * 719) + 1);
 	
 
@@ -146,7 +147,7 @@ function jsonCall(csvFile) {
 	
 	console.log(randomNum);
 
-	var csvArray = $.csv.toArrays(csvFile);
+	
 
 	if (randomNum === 29) {
 		pkmnName = "Nidoran";
@@ -207,14 +208,19 @@ function csvCall() {
 	$.ajax({
 		url: "pokemon_species.csv",
 		dataType: "text",
-		success: jsonCall,
+		success: csvSuccess,
 	});
+}
+
+function csvSuccess(csvFile) {
+	csvArray = $.csv.toArrays(csvFile);
+	console.log("Made a successful CSV call...");
 }
 
 
 
 function reset() {
-	csvCall();
+	jsonCall();
 }
 
 $("#skip").click(function() {
@@ -260,6 +266,10 @@ $("#submitGuess").click(function() {
 		console.log("Has invalid characters...");
 	}
 });
+
+$(document).ready(function() {
+	csvCall();
+	});
 		
 </script>
 
