--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
 <!-- Main Image Box -->
 <div id="imageBox" class="pokeBox">
-<img id="myImg" />
+<img id="myImg" src="http://cdn.bulbagarden.net/upload/0/0d/025Pikachu.png"/>
 <!-- src="http://t2.gstatic.com/images?q=tbn:ANd9GcReehil_3oUTa3YqXmfDcOYmjvIT_DYpw3oUmSnmj3gqAGx__eh"/> -->
 
 <p id="rightOrNot">
-<span id="amIRight">Correct!</span>
+<span id="amIRight">Play!</span>
 <br>
-<span id="whoIsIt">It's a Pokemon!</span>
+<span id="whoIsIt">Press New Game</span>
 <!--<p id="amIRight">Correct!</p>
 <p id="whoIsIt">It's a Pokemon!</p>-->
 </p>
@@ -97,7 +97,7 @@
 <p class="pokeBoxTitle">Who is it?<p>
 <input id="guess" type="text">
 <button id="submitGuess">Take a Guess</button>
-<button id="skip">Skip</button>
+<button id="newGame">New Game</button>
 </div>
 <!--- -END OF GUESS INPUT BOX ------>
 
@@ -229,6 +229,9 @@ function getRandomId() {
 function jsonSuccess(jsonFile) {
 	var dataStr = jsonFile.query.pages["-1"].imageinfo[0].url;
 	$("#myImg").attr("src", dataStr);
+	$("#myImg").on("load", function() {
+				buttonSwitch(false);
+			});
 };
 
 function jsonCall() {
@@ -267,7 +270,6 @@ function jsonCall() {
 			404: function () { alert("page not found"); }
 		},
 		success: jsonSuccess,
-		async: false,
 	});
 }
 
@@ -281,10 +283,7 @@ function csvCall() {
 
 function csvSuccess(csvFile) {
 	csvArray = $.csv.toArrays(csvFile);
-	console.log("Made a successful CSV call...");
-
-	// This jsonCall sets up the first pic.
-	jsonCall();
+	// console.log("Made a successful CSV call...");
 }
 
 
@@ -327,7 +326,15 @@ function checkCheckboxes() {
 	});
 }
 
+function buttonSwitch(aBoolean) {
+	for (var j = 1; j < 7; j++) {
+		// console.log("Disabled " + j);
+		$("#gen" + j).prop("disabled", aBoolean); 
+	}
 
+	$("#submitGuess").prop("disabled", aBoolean);
+	$("#newGame").prop("disabled", aBoolean);
+} 
 
 
 /********************************************************/
@@ -364,15 +371,18 @@ function correctGuessSequence(aGuess, currStatus) {
 	aGuess = aGuess.substring(0,1).toUpperCase() + aGuess.substring(1);
 	
 	if (currStatus === "Correct") {
+		$("#guess").val("");
 		score += 1;
 		$("#currScoreDisp").html(score);
 		changeHighScore();
-		showCorrectOrNot("Correct!", "It's " + aGuess + "!", true);
+		showCorrectOrNot("Correct!", "It's " + aGuess + " !", true);
 		guessesLeft = 3;
 	} else if (currStatus === "Incorrect") {
 		showCorrectOrNot("Incorrect", "Try again!", false);
+		buttonSwitch(false);
 		guessesLeft -= 1;
 	} else if (currStatus === "GameOver") {
+		$("#guess").val("");
 		guessesLeft = 3;
 		showCorrectOrNot("Game Over", "It was " + aGuess + ". Play again!", true);
 	}
@@ -385,6 +395,7 @@ $("#currScoreDisp").html(score);
 $("#guessesLeft").html(guessesLeft);
 
 $("#submitGuess").click(function() {
+	buttonSwitch(true);
 	console.log("Submit ran...");
 	var myGuess = $("#guess").val();
 	var guessCheck;
@@ -406,25 +417,30 @@ $("#submitGuess").click(function() {
 				correctGuessSequence(myGuess, "Incorrect");
 			}
 		}
-
+ 
 	} else {	
 		console.log("Has invalid characters...");
+		buttonSwitch(false);
 	}
 });
 
 $(document).ready(function() {
-	$("#rightOrNot").hide(function() { 
-		//console.log("Ayo"); 
-	});
 	csvCall();
 	setupHighScore();
 	checkCheckboxes();
-	
-	});
+	buttonSwitch(false);
+	$("#guess").val("");
+});
 
-$("#skip").click(function() {
+$("#newGame").click(function() {
+	$("#rightOrNot").hide(200);
+	buttonSwitch(true);
+	score = 0; 
+	$("#currScoreDisp").html(score); 
+	$("#guess").val("");
 	jsonCall();
 });
+
 
 
 
